--- a/src/components/error-message/index.scss
+++ b/src/components/error-message/index.scss
@@ -1,5 +1,25 @@
 .error-message {
-    background-color: rgb(255, 90, 90);
-    color: white;
+    background-color: rgb(255, 0, 0);
     text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: white;
+    font-weight: 700;
+    padding: 20px;
+    max-width: 300px;
+    max-width: max-content;
+    margin: 0 auto;
+
+    animation: hide-message linear 5s;
+}
+
+@keyframes hide-message {
+    80% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
