--- a/src/components/success-message/index.scss
+++ b/src/components/success-message/index.scss
@@ -1,10 +1,18 @@
 .success-message {
-    background-color: rgb(51, 255, 0);
+    background-color: rgb(0, 255, 55);
     text-align: center;
+    position: absolute;
+    display: block;
+    padding: 10px;
+    top: 0;
+    right: 0;
+    color: black;
     font-weight: 700;
-    padding: 5px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    max-width: 300px;
     max-width: max-content;
-    margin: 10px auto;
+    margin: 0 auto;
 
     animation: hide-message linear 5s;
 }
