--- a/src/components/form/index.scss
+++ b/src/components/form/index.scss
@@ -1,3 +1,10 @@
+.form {
+    border: 1px solid gray;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 5px;
+}
+
 .form__fields {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
