--- a/src/components/submit-button/index.scss
+++ b/src/components/submit-button/index.scss
@@ -1,4 +1,31 @@
 .form__submit-button {
     display: block;
-    margin: 5px auto;
+    margin: 10px auto;
+    background-color: white;
+    border: none;
+    color: gray;
+    transition: color .3s linear;
+    font-weight: 700;
+}
+
+.form__submit-button:hover {
+    color: black;
+}
+
+.recipe-card__submit-button {
+    display: block;
+    margin: 10px auto;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: 700;
+    background-color: white;
+    border: none;
+    color: white;
+    background-color: red;
+
+    transition: background-color .3s linear;
+}
+
+.recipe-card__submit-button:hover {
+    background-color: rgb(150, 0, 0);
 }
