Se agrega select a formulario - sin terminar

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -31,3 +31,11 @@ h3 {
 button:focus {
     background-color: transparent;
 }
+
+select {
+    display: block;
+}
+
+option {
+    display: block;
+}
