--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -27,3 +27,15 @@ h2 {
 h3 {
     font-size: 22px;
 }
+
+button:focus {
+    background-color: transparent;
+}
+
+select {
+    display: block;
+}
+
+option {
+    display: block;
+}
