--- a/src/components/submit-button/index.scss
+++ b/src/components/submit-button/index.scss
@@ -16,7 +16,7 @@
     color: black;
 }
 
-.recipe-card__submit-button {
+.card__submit-button {
     display: block;
     margin: 10px auto;
     padding: 5px;
@@ -30,10 +30,10 @@
     transition: background-color .3s linear;
 }
 
-.recipe-card__submit-button:focus {
+.card__submit-button:focus {
     background-color: red;
 }
 
-.recipe-card__submit-button:hover {
+.card__submit-button:hover {
     background-color: rgb(150, 0, 0);
 }
