--- a/src/components/ingredient-item/index.scss
+++ b/src/components/ingredient-item/index.scss
@@ -2,4 +2,7 @@
     padding: 10px;
     border: 2px solid gray;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
