--- a/src/components/ingredient-item/index.scss
+++ b/src/components/ingredient-item/index.scss
@@ -3,6 +3,7 @@
     border: 2px solid gray;
     border-radius: 5px;
     display: flex;
+    height: 100%;
     flex-direction: column;
     justify-content: space-between;
 }
