--- a/src/components/ingredient-item/index.scss
+++ b/src/components/ingredient-item/index.scss
@@ -2,7 +2,23 @@
     padding: 10px;
     border: 2px solid gray;
     border-radius: 5px;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: start;
+
+    & button.card__delete-button {
+        margin-top: auto;
+    }
+}
+
+
+.ingredient-package__title {
+    align-self: center;
+}
+
+.ingredient-package__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 15px;
 }
