--- a/src/pages/ingredients/create-ingredient/index.scss
+++ b/src/pages/ingredients/create-ingredient/index.scss
@@ -1,5 +1,7 @@
 .ingredient__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    @media (min-width: 1600px) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+    }
 }
