--- a/src/components/ingredient-item/index.scss
+++ b/src/components/ingredient-item/index.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
+    margin: 10px;
 
     & button.card__delete-button {
         margin-top: auto;
