--- a/src/components/ingredient-item/index.scss
+++ b/src/components/ingredient-item/index.scss
@@ -5,7 +5,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
+    margin: 10px;
 
     & button.card__delete-button {
         margin-top: auto;
