--- a/src/pages/ingredients/create-ingredient/index.scss
+++ b/src/pages/ingredients/create-ingredient/index.scss
@@ -1,4 +1,6 @@
 .ingredient__container {
+    margin-bottom: 20px;
+
     @media (min-width: 1600px) {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
