Se mejora estilos de formularios

--- a/src/components/form-create-recipe/index.scss
+++ b/src/components/form-create-recipe/index.scss
@@ -6,6 +6,18 @@
     max-width: max-content;
 }
 
+.form__field {
+    margin: 15px;
+
+    label {
+        padding: 5px;
+        display: block;
+        margin: 0 auto;
+        font-size: 17px;
+        text-align: center;
+    }
+}
+
 .validation-error {
     border: 2px solid red;
     border-radius: 5px;
