--- a/src/components/ingredient-item/index.scss
+++ b/src/components/ingredient-item/index.scss
@@ -23,3 +23,11 @@
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 15px;
 }
+
+.button-grid__container {
+    max-width: max-content;
+    margin: auto auto 10px auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
