--- a/src/components/navigation-button/index.scss
+++ b/src/components/navigation-button/index.scss
@@ -1,6 +1,18 @@
-.link {
+.navigation-bar__link {
     text-decoration: none;
-    font-size: 18px;
-    padding: 10px;
+    margin: 0;
+    padding: 0;
+    line-height: 32px;
+    font-size: 16px;
+    text-align: center;
     display: block;
+    color: rgb(70, 70, 70);
+    border: 3px outset rgb(104, 97, 97);
+    max-width: 100%;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.navigation-bar__link:hover {
+    background-color: rgb(228, 252, 241);
 }
