--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -16,6 +16,13 @@ h3 {
     padding: 0;
 }
 
+nav {
+    background-color: white;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 h1 {
     font-size: 30px;
 }
