--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,4 +1,21 @@
-.recipes__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+.table-recipes {
+    width: 100%;
+    margin: 1rem auto;
+    
+    @media (min-width: 768px) {
+        width: 70%;
+    }
+
+    @media (min-width: 996px) {
+        width: 50%;
+    }
+}
+
+.link__icon {
+    font-size: 20px;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+    max-width: min-content;
+    color: rgb(162, 184, 161);
 }
