--- a/src/root/index.scss
+++ b/src/root/index.scss
@@ -1,40 +1,33 @@
+main {
+    width: 100%;
+    padding: .5rem;
+}
+
 .container {
     display: grid;
     grid-template-columns: 20% 80%;
     width: 100vw;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.navigation-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     min-height: 100vh;
+    margin: 0;
 }
 
 .navigation-bar {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border: none;
-    margin-top: 100px;
-    background-color: white;
-    box-shadow: none;
-    height: 100%;
-    line-height: normal;
-    padding: 10px 50px 10px 10px;
+    gap: .5rem;
+    padding: 2rem;
+    background: rgb(251,250,255);
+    background: linear-gradient(180deg, rgba(251,250,255,1) 0%, rgba(238,238,254,1) 35%, rgba(220,221,221,1) 100%);
+}
 
-    &__link {
-        color: rgb(122, 122, 122);
-    }
+.grid-3-lg {
+    display: block;
+    width: 100%;
 
-    &__link:hover {
-        color: rgb(0, 0, 0);
+    @media (min-width: 996px) {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: .5rem;
+        place-items: center;
     }
 }
