--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -20,6 +20,7 @@
     display: block;
     max-width: min-content;
     box-sizing: border-box;
-    color: rgb(162, 184, 161);
-    border: rgb(162, 184, 161) 2px solid;
+    color: rgb(9, 9, 9);
+    border: rgb(169, 169, 169) 1px solid;
+    border-radius: 10px;
 }
